--- a/sass/page/_homepage.scss
+++ b/sass/page/_homepage.scss
@@ -14,6 +14,9 @@
     .header {
       position: static;
     }
+    .sub-menu {
+      position: static;
+    }
     .sticky {
       position: fixed;
       top: 0;
@@ -32,7 +35,7 @@
   }
 
   @include at-breakpoint($wide-desktop) {
-    .header-inner {
+    .header-inner, .sub-menu-inner {
       width: 100%;
     }
     .sticky {
