--- a/sass/partial/_sub-menu.scss
+++ b/sass/partial/_sub-menu.scss
@@ -1,11 +1,23 @@
 .sub-menu {
-  @include reset-box-model;
-  overflow: auto;
-  list-style: none;
-  text-align: center;
-  @include nowrap;
-  @include adjust-font-size-to(13px);
-  background-color: white;
+
+  .sub-menu-inner {
+    background-color: white;
+    @include pie-clearfix;
+    @include box-sizing(border-box);
+    max-width: 1512px;
+    margin: 0 auto;
+  }
+
+  .sub-menu-list {
+    @include reset-list-style;
+    overflow: auto;
+    list-style: none;
+    text-align: center;
+    @include nowrap;
+    @include adjust-font-size-to(13px);
+  }
+
+
   li {
     position: relative;
     display: inline-block;
@@ -26,5 +38,27 @@
     text-decoration: none;
     &:hover { color: $link-color-hover; }
   }
+
+  @include at-breakpoint($desktop) {
+    position: fixed;
+    top: 61px;
+    left: 0;
+    right: 0;
+    z-index: 300;
+    margin: 0 auto;
+    .sub-menu-inner {
+      @include transition(width 0.5s);
+      width: 100%;
+    }
+  }
+
+  @include at-breakpoint($wide-desktop) {
+    .sub-menu-inner {
+      width: 90%;
+    }
+
+  }
+
+
 }
 
