--- a/stylesheets/all.css
+++ b/stylesheets/all.css
@@ -199,51 +199,52 @@ body { background-color: #183840; position: relative; }
 .container.single-article { max-width: 768px; }
 @media (min-width: 640px) { .container.single-article { padding: 0 48px; } }
 
-@media (min-width: 1025px) { .content { padding-top: 61px; } }
+@media (min-width: 1025px) { .content { padding-top: 61px; }
+  .content.has-sub-menu { padding-top: 110px; } }
 
 [class^="icon-map-"], [class*=" icon-map-"] { display: block; text-indent: 110%; white-space: nowrap; overflow: hidden; background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; background-repeat: no-repeat; width: 128px; height: 128px; }
 
-.icon-map-changhua { background-image: url('/images/map/changhua.png?1437731363'); background-image: none, url('/images/map/changhua.svg?1437731363'); }
+.icon-map-changhua { background-image: url('/images/map/changhua.png?1438112289'); background-image: none, url('/images/map/changhua.svg?1438112289'); }
 
-.icon-map-chiayi { background-image: url('/images/map/chiayi.png?1437731363'); background-image: none, url('/images/map/chiayi.svg?1437731363'); }
+.icon-map-chiayi { background-image: url('/images/map/chiayi.png?1438112289'); background-image: none, url('/images/map/chiayi.svg?1438112289'); }
 
-.icon-map-chiayicity { background-image: url('/images/map/chiayicity.png?1437731363'); background-image: none, url('/images/map/chiayicity.svg?1437731363'); }
+.icon-map-chiayicity { background-image: url('/images/map/chiayicity.png?1438112289'); background-image: none, url('/images/map/chiayicity.svg?1438112289'); }
 
-.icon-map-hsinchu { background-image: url('/images/map/hsinchu.png?1437731363'); background-image: none, url('/images/map/hsinchu.svg?1437731363'); }
+.icon-map-hsinchu { background-image: url('/images/map/hsinchu.png?1438112289'); background-image: none, url('/images/map/hsinchu.svg?1438112289'); }
 
-.icon-map-hsinchucity { background-image: url('/images/map/hsinchucity.png?1437731363'); background-image: none, url('/images/map/hsinchucity.svg?1437731363'); }
+.icon-map-hsinchucity { background-image: url('/images/map/hsinchucity.png?1438112289'); background-image: none, url('/images/map/hsinchucity.svg?1438112290'); }
 
-.icon-map-hualien { background-image: url('/images/map/hualien.png?1437731363'); background-image: none, url('/images/map/hualien.svg?1437731363'); }
+.icon-map-hualien { background-image: url('/images/map/hualien.png?1438112290'); background-image: none, url('/images/map/hualien.svg?1438112290'); }
 
-.icon-map-kaohsiung { background-image: url('/images/map/kaohsiung.png?1437731363'); background-image: none, url('/images/map/kaohsiung.svg?1437731363'); }
+.icon-map-kaohsiung { background-image: url('/images/map/kaohsiung.png?1438112290'); background-image: none, url('/images/map/kaohsiung.svg?1438112290'); }
 
-.icon-map-keelungcity { background-image: url('/images/map/keelungcity.png?1437731363'); background-image: none, url('/images/map/keelungcity.svg?1437731363'); }
+.icon-map-keelungcity { background-image: url('/images/map/keelungcity.png?1438112290'); background-image: none, url('/images/map/keelungcity.svg?1438112290'); }
 
-.icon-map-miaoli { background-image: url('/images/map/miaoli.png?1437731363'); background-image: none, url('/images/map/miaoli.svg?1437731363'); }
+.icon-map-miaoli { background-image: url('/images/map/miaoli.png?1438112290'); background-image: none, url('/images/map/miaoli.svg?1438112290'); }
 
-.icon-map-nantou { background-image: url('/images/map/nantou.png?1437731363'); background-image: none, url('/images/map/nantou.svg?1437731363'); }
+.icon-map-nantou { background-image: url('/images/map/nantou.png?1438112290'); background-image: none, url('/images/map/nantou.svg?1438112290'); }
 
-.icon-map-newtaipeicity { background-image: url('/images/map/newtaipeicity.png?1437731363'); background-image: none, url('/images/map/newtaipeicity.svg?1437731363'); }
+.icon-map-newtaipeicity { background-image: url('/images/map/newtaipeicity.png?1438112290'); background-image: none, url('/images/map/newtaipeicity.svg?1438112290'); }
 
-.icon-map-penghu { background-image: url('/images/map/penghu.png?1437731363'); background-image: none, url('/images/map/penghu.svg?1437731363'); }
+.icon-map-penghu { background-image: url('/images/map/penghu.png?1438112290'); background-image: none, url('/images/map/penghu.svg?1438112290'); }
 
-.icon-map-pingtung { background-image: url('/images/map/pingtung.png?1437731363'); background-image: none, url('/images/map/pingtung.svg?1437731363'); }
+.icon-map-pingtung { background-image: url('/images/map/pingtung.png?1438112290'); background-image: none, url('/images/map/pingtung.svg?1438112290'); }
 
-.icon-map-taichung { background-image: url('/images/map/taichung.png?1437731363'); background-image: none, url('/images/map/taichung.svg?1437731363'); }
+.icon-map-taichung { background-image: url('/images/map/taichung.png?1438112290'); background-image: none, url('/images/map/taichung.svg?1438112290'); }
 
-.icon-map-tainan { background-image: url('/images/map/tainan.png?1437731363'); background-image: none, url('/images/map/tainan.svg?1437731363'); }
+.icon-map-tainan { background-image: url('/images/map/tainan.png?1438112290'); background-image: none, url('/images/map/tainan.svg?1438112290'); }
 
-.icon-map-taipei { background-image: url('/images/map/taipei.png?1437731363'); background-image: none, url('/images/map/taipei.svg?1437731363'); }
+.icon-map-taipei { background-image: url('/images/map/taipei.png?1438112290'); background-image: none, url('/images/map/taipei.svg?1438112290'); }
 
-.icon-map-taitung { background-image: url('/images/map/taitung.png?1437731363'); background-image: none, url('/images/map/taitung.svg?1437731363'); }
+.icon-map-taitung { background-image: url('/images/map/taitung.png?1438112290'); background-image: none, url('/images/map/taitung.svg?1438112290'); }
 
-.icon-map-taiwan { background-image: url('/images/map/taiwan.png?1437731363'); background-image: none, url('/images/map/taiwan.svg?1437731363'); }
+.icon-map-taiwan { background-image: url('/images/map/taiwan.png?1438112290'); background-image: none, url('/images/map/taiwan.svg?1438112290'); }
 
-.icon-map-taoyuan { background-image: url('/images/map/taoyuan.png?1437731363'); background-image: none, url('/images/map/taoyuan.svg?1437731363'); }
+.icon-map-taoyuan { background-image: url('/images/map/taoyuan.png?1438112290'); background-image: none, url('/images/map/taoyuan.svg?1438112290'); }
 
-.icon-map-yilan { background-image: url('/images/map/yilan.png?1437731363'); background-image: none, url('/images/map/yilan.svg?1437731363'); }
+.icon-map-yilan { background-image: url('/images/map/yilan.png?1438112290'); background-image: none, url('/images/map/yilan.svg?1438112290'); }
 
-.icon-map-yunlin { background-image: url('/images/map/yunlin.png?1437731363'); background-image: none, url('/images/map/yunlin.svg?1437731363'); }
+.icon-map-yunlin { background-image: url('/images/map/yunlin.png?1438112290'); background-image: none, url('/images/map/yunlin.svg?1438112290'); }
 
 .btn { display: inline-block; margin-bottom: 0; padding: 4px 22px; border: 2px solid #f1f1f1; -webkit-border-radius: 3px; -moz-border-radius: 3px; -ms-border-radius: 3px; -o-border-radius: 3px; border-radius: 3px; font-size: 15px; line-height: 24px; background-image: none; text-align: center; text-shadow: none; cursor: pointer; outline: none; white-space: nowrap; -webkit-user-select: none; -moz-user-select: none; user-select: none; color: #444444; background-color: #f1f1f1; -webkit-transition: border 0.25s, background-color 0.25s, color 0.25s; -moz-transition: border 0.25s, background-color 0.25s, color 0.25s; -o-transition: border 0.25s, background-color 0.25s, color 0.25s; transition: border 0.25s, background-color 0.25s, color 0.25s; }
 .btn:hover { text-decoration: none; color: #444444; border-color: #dddddd; background-color: #dddddd; }
@@ -416,7 +417,7 @@ body { background-color: #183840; position: relative; }
 .header .header-inner { max-width: 1512px; margin: 0 auto; padding: 0 24px; background-color: white; border-bottom: 1px solid #ddd; }
 .header .header-inner:after { content: ""; display: table; clear: both; }
 .header .logo { float: left; padding: 6px 0 6px; }
-.header .logo a { display: block; text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/logo.png?1437731362'); background-repeat: no-repeat; background-position: 50% 50%; width: 162px; height: 48px; background-image: none, url('/images/logo.svg?1437731362'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
+.header .logo a { display: block; text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/logo.png?1438112289'); background-repeat: no-repeat; background-position: 50% 50%; width: 162px; height: 48px; background-image: none, url('/images/logo.svg?1438112289'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
 .header .menu-btn { position: absolute; top: 0; right: 0; cursor: pointer; border: none; background-color: transparent; z-index: 250; color: #50B584; width: 72px; height: 60px; padding: 28px 24px; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; float: right; }
 .header .menu-btn:focus { outline: none; }
 .header .menu-btn-line { position: relative; width: 100%; height: 3px; background-color: #50B584; -webkit-transition: background-color 0.25s; -moz-transition: background-color 0.25s; -o-transition: background-color 0.25s; transition: background-color 0.25s; }
@@ -505,11 +506,16 @@ body { background-color: #183840; position: relative; }
   .is-open-menu body, .is-open-menu .page-outer { height: auto; }
   .is-open-menu .page-outer { overflow: visible; } }
 
-.sub-menu { margin: 0; padding: 0; border: 0; overflow: auto; list-style: none; text-align: center; white-space: nowrap; font-size: 13px; line-height: 24px; background-color: white; }
+.sub-menu .sub-menu-inner { background-color: white; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; max-width: 1512px; margin: 0 auto; }
+.sub-menu .sub-menu-inner:after { content: ""; display: table; clear: both; }
+.sub-menu .sub-menu-list { margin: 0; padding: 0; border: 0; list-style: none; overflow: auto; list-style: none; text-align: center; white-space: nowrap; font-size: 13px; line-height: 24px; }
 .sub-menu li { position: relative; display: inline-block; }
 .sub-menu li.active:after { content: ""; position: absolute; bottom: 9px; left: 50%; margin-left: -1px; border: 2px solid #50B584; -webkit-border-radius: 50%; -moz-border-radius: 50%; -ms-border-radius: 50%; -o-border-radius: 50%; border-radius: 50%; }
 .sub-menu a { display: block; padding: 12px; color: #444444; text-decoration: none; }
 .sub-menu a:hover { color: #3e946a; }
+@media (min-width: 1025px) { .sub-menu { position: fixed; top: 61px; left: 0; right: 0; z-index: 300; margin: 0 auto; }
+  .sub-menu .sub-menu-inner { -webkit-transition: width 0.5s; -moz-transition: width 0.5s; -o-transition: width 0.5s; transition: width 0.5s; width: 100%; } }
+@media (min-width: 1512px) { .sub-menu .sub-menu-inner { width: 90%; } }
 
 .hero { padding-top: 60px; margin: 0 auto; }
 .hero:after { content: ""; display: table; clear: both; }
@@ -555,7 +561,7 @@ body { background-color: #183840; position: relative; }
   .hero .hero-block:hover .hero-block-title:after { opacity: .95; -webkit-transform: scale(1.6, 1.6); -moz-transform: scale(1.6, 1.6); -ms-transform: scale(1.6, 1.6); -o-transform: scale(1.6, 1.6); transform: scale(1.6, 1.6); }
   .hero .hero-block:hover .hero-block-title .description { max-height: 120px; opacity: 1; } }
 
-.post-list { padding-top: 72px; padding-bottom: 72px; background-color: #F7F7F7; }
+.post-list { padding-top: 48px; padding-bottom: 48px; background-color: #F7F7F7; }
 
 .post-item { display: block; }
 .post-item:after { content: ""; display: table; clear: both; }
@@ -597,8 +603,8 @@ body { background-color: #183840; position: relative; }
 
 .footer { position: relative; padding: 72px 0 360px; background-color: #183840; color: #ddd; text-align: center; overflow: hidden; background-image: radial-gradient(circle at 85% 85%, #2b6f69 5%, #183840 40%); }
 .footer:after { content: ""; display: table; clear: both; }
-.footer:before { content: ''; position: absolute; left: -50%; bottom: 0; height: 0; opacity: 0.25; text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/footer/footer-vi.png?1437731363'); background-repeat: no-repeat; background-position: 50% 50%; width: 500px; height: 500px; background-image: none, url('/images/footer/footer-vi.svg?1437731363'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
-.footer .footer-logo { position: absolute; right: 24px; bottom: 72px; z-index: 50; text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/footer/footer-title.png?1437731362'); background-repeat: no-repeat; background-position: 50% 50%; width: 180px; height: 150px; background-image: none, url('/images/footer/footer-title.svg?1437731362'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
+.footer:before { content: ''; position: absolute; left: -50%; bottom: 0; height: 0; opacity: 0.25; text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/footer/footer-vi.png?1438112289'); background-repeat: no-repeat; background-position: 50% 50%; width: 500px; height: 500px; background-image: none, url('/images/footer/footer-vi.svg?1438112289'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
+.footer .footer-logo { position: absolute; right: 24px; bottom: 72px; z-index: 50; text-indent: -119988px; overflow: hidden; text-align: left; background-image: url('/images/footer/footer-title.png?1438112289'); background-repeat: no-repeat; background-position: 50% 50%; width: 180px; height: 150px; background-image: none, url('/images/footer/footer-title.svg?1438112289'); background-position: center center; -webkit-background-size: contain; -moz-background-size: contain; -o-background-size: contain; background-size: contain; }
 .footer .copy { position: absolute; right: 24px; bottom: 24px; text-align: right; font-size: 11px; line-height: 1.1; }
 .footer .site-list { margin: 0 auto; padding: 0 24px; max-width: 240px; position: relative; z-index: 50; }
 .footer .site { display: block; -webkit-box-sizing: border-box; -moz-box-sizing: border-box; box-sizing: border-box; margin-bottom: 48px; }
@@ -712,7 +718,8 @@ body { background-color: #183840; position: relative; }
 .homepage .header-sticky-wrapper { position: absolute; top: 0; left: 0; right: 0; }
 @media (min-width: 1025px) { .homepage .header-sticky-wrapper { position: static; }
   .homepage .header { position: static; }
+  .homepage .sub-menu { position: static; }
   .homepage .sticky { position: fixed; top: 0; left: 0; right: 0; z-index: 1000; max-width: 1512px; width: 100%; margin: 0 auto; -webkit-transition: width 0.5s; -moz-transition: width 0.5s; -o-transition: width 0.5s; transition: width 0.5s; }
   .homepage .sub-menu.sticky { margin-top: 61px; background-color: rgba(255, 255, 255, 0.9); } }
-@media (min-width: 1512px) { .homepage .header-inner { width: 100%; }
+@media (min-width: 1512px) { .homepage .header-inner, .homepage .sub-menu-inner { width: 100%; }
   .homepage .sticky { width: 90%; } }
