revise post-list padding-top

--- a/sass/partial/_post-list.scss
+++ b/sass/partial/_post-list.scss
@@ -1,7 +1,10 @@
 .post-list {
-  @include padding-leader(2);
-  @include padding-trailer(2);
+  @include padding-leader(1);
   background-color: #F7F7F7;
+  @include at-breakpoint($pad) {
+    @include padding-leader(2);
+    @include padding-trailer(2);
+  }
 }
 
 .post-item {
