add primary-nav current page active

--- a/index.html.slim
+++ b/index.html.slim
@@ -1,6 +1,6 @@
 - @page_name = "homepage"
 
 = render '/partial/hero'
-= render '/partial/header'
+= render '/partial/homepage-header'
 = render '/partial/sub-menu'
 = render '/partial/post-list'
