--- a/partial/_homepage-header.html.slim
+++ b/partial/_homepage-header.html.slim
@@ -7,12 +7,12 @@
       .menu-inner
         a.menu-logo
         ul.primary-nav
-          = nav_link_to "最新消息", "/post/"
-          = nav_link_to "參選宣言", "#"
-          = nav_link_to "小英的故事", "#"
-          = nav_link_to "願景", "#"
-          = nav_link_to "加入志工", "#"
-          = nav_link_to "捐款", "#"
+          li.is-active: a href="/post/" 最新消息
+          li: a href="#" 參選宣言
+          li: a href="#" 小英的故事
+          li: a href="#" 願景
+          li: a href="#" 加入志工
+          li: a href="#" 捐款
 
         .menu-bottom
           a.media-collection href="#" 媒體專區
