--- a/sass/partial/_header.scss
+++ b/sass/partial/_header.scss
@@ -29,7 +29,7 @@
     border: none;
     background-color: transparent;
     z-index: 250;
-    color: #50B584;
+    color: $color-primary;
     width: 72px;
     height: 60px;
     padding: 28px 24px;
@@ -43,7 +43,7 @@
     position: relative;
     width: 100%;
     height: 3px;
-    background-color: #50B584;
+    background-color: $color-primary;
     @include transition(background-color 0.25s);
     &:before, &:after {
       content: '';
@@ -51,7 +51,7 @@
       left: 0;
       width: 100%;
       height: 3px;
-      background-color: #50B584;
+      background-color: $color-primary;
       @include transition(background-color 0.5s, transform .5s);
     }
     &:before{
@@ -308,8 +308,11 @@
         color: black;
         margin: 0 12px;
         &:hover {
-          color: #50B584;
+          color: $color-primary;
         }
+      }
+      .is-active a {
+        color: $color-primary;
       }
     }
     .menu-bottom {
